# haskell-for-working-programmers

./: .gitignore  README.md  book.toml
exercises/002-hello-world-project/: hello-world-project.cabal
exercises/002-hello-world-project/src/HFWP/: SomeLibrary.hs
exercises/002-hello-world-project/test/: Main.hs
src/: SUMMARY.md  getting-help.md  haskell-101.md  introduction.md  setting-up-your-tools.md  writing-your-first-program.md
